<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black80"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/txt_about_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_25" />

        <TextView
            android:id="@+id/btn_about_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_back_selector"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_30"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_20" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_about_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible" >

        <RelativeLayout
            android:id="@+id/layout_about_main_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_10"
            android:background="@drawable/bg_about_btn_selecter" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_about_version" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="@dimen/dimen_110"
                android:text="@string/txt_about_version"
                android:textColor="@drawable/txt_fm_sum"
                android:textSize="@dimen/text_size_22" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_about_main_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:background="@drawable/bg_about_btn_selecter" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_about_order" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="@dimen/dimen_110"
                android:text="@string/txt_about_order"
                android:textColor="@drawable/txt_fm_sum"
                android:textSize="@dimen/text_size_22" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/dimen_20"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_version"
                android:textColor="@drawable/gray"
                android:textSize="@dimen/text_size_20" />

            <TextView
                android:id="@+id/txt_about_version_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_20" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15"
            android:text="@string/txt_update_content"
            android:textColor="@drawable/gray"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:id="@+id/txt_about_version_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:textColor="@drawable/white"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_about_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/dimen_20"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_about_order_1"
                android:textColor="@drawable/txt_seach"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:text="@string/txt_about_order_11"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_about_order_2"
                android:textColor="@drawable/txt_seach"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:text="@string/txt_about_order_22"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15"
            android:text="@string/txt_about_order_3"
            android:textColor="@drawable/gray"
            android:textSize="@dimen/text_size_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_about_order_4"
                android:textColor="@drawable/txt_seach"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:text="@string/txt_about_order_44"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_about_order_5"
                android:textColor="@drawable/txt_seach"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:text="@string/txt_about_order_55"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_about_order_6"
                android:textColor="@drawable/txt_seach"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:text="@string/txt_about_order_66"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>