<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black80"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/setting_info"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_22" />

        <TextView
            android:id="@+id/btn_info_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_back_selector"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_30"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_22" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dimen_25"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information_name"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_22" />

            <TextView
                android:id="@+id/txt_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_22" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information_sex"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_22" />

            <TextView
                android:id="@+id/txt_info_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_22" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information_phone"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_22" />

            <TextView
                android:id="@+id/txt_info_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_22" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information_car"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_22" />

            <TextView
                android:id="@+id/txt_info_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_22" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information_tips"
                android:textColor="@drawable/gray"
                android:textSize="@dimen/text_size_18" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_tips_1"
                    android:textColor="@drawable/gray"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_tips_2"
                    android:textColor="@drawable/gray"
                    android:textSize="@dimen/text_size_18" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_info_no"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/information_no_tips_1"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_22" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/black80"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_info_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10"
                android:text="@string/information_no_tips_2"
                android:textColor="@drawable/white"
                android:textSize="@dimen/text_size_22" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_80"
                android:src="@drawable/img_info_phone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>